apps-workload-cluster-1/k8s-manifests/otel-collector-daemonset.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-gateway-regional
  namespace: monitoring
spec:
  type: ExternalName
  externalName: k8s-monitori-otelcoll-da58f4d952-3146f2b4e9f7c684.elb.us-east-1.amazonaws.com
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
